--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,28 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 
+}
+
+.flex{
+    display: flex;
+}
+
+.align-items-center{
+    align-items: center;
+}
+
+.space-between{
+    justify-content: space-between;
+}
+
+
+
+.overflow{
+    overflow: auto;
+}
+
+.nowrap{
+    flex-wrap: nowrap;
+}
